# tpt-editor-desktop

./: .eslintrc.js  .git-commit-template  .gitignore  .npmrc  .prettierignore  .prettierrc.js  CODE_OF_CONDUCT.md  COMMUNITY.md  QWEN.md  README.md  jsdoc.json  main.js  package-lock.json  package.json  preload.js  solo-developer-demo.html  todo.md  todo1.md  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  question.md
.github/workflows/: ci-cd.yml
.husky/: commit-msg  pre-commit
assets/css/: main.css
assets/js/: batch.js  main.js
docs/: VERSION.md  api-reference.md  contribution-guidelines.md  enhanced-utilities.md  faq.md  feedback.html  keyboard-shortcuts.md  search.html  user-manual.md  video-tutorials.md
docs/deployment/: QUICK-START.md  TROUBLESHOOTING.md
docs/tutorials/: getting-started.md  sprite-generation-basics.md
scripts/: build-dist.js  check-performance-regression.js  generate-performance-report.js  generate-test-summary.js
src/: index.html  tauri-init.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/audio/: audio-manager.js  audio-mixer.js  spectrum-visualizer.js  waveform-visualizer.js
src/core/: advanced-search-manager.js  ai-quality-assessor.js  api-documentation-generator.js  app.js  asset-cache.js  asset-workflow-manager.js  background-processor.js  cloud-sync.js  code-quality-manager.js  collaboration-manager.js  database-backup-manager.js  database-manager.js  database-migration-manager.js  database-query-optimizer.js  feature-gate.js  (+17 more)
(+145 files in other folders)
