[package]
name = "tpt-asset-editor"
version = "1.0.0"
description = "Desktop version of TPT Online Asset Editor for game development"
authors = ["TPT Online Team"]
license = "GPL-2.0-or-later"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tpt_asset_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["fs"] }
